--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,7 @@
 volumes:
   authdbvol:
+  usersdbvol:
+  rmqvol:
 
 services:
   authdb:
@@ -14,18 +16,69 @@ services:
       - MYSQL_USER=dbuser
       - MYSQL_PASSWORD=dbsomething
 
-  adminer:
-    image: adminer:latest
-    ports:
-      - 18080:8080
-    environment:
-      - ADMINER_DEFAULT_SERVER=authdb
+  usersdb:
+    image: mongo
+    volumes:
+      - usersdbvol:/data/db
 
+  # adminer:
+  #   image: adminer:latest
+  #   ports:
+  #     - 18080:8080
+  #   environment:
+  #     - ADMINER_DEFAULT_SERVER=authdb
+
+  # usersservice:
+  #   image: stoplight/prism:4
+  #   # volumes:
+  #   #   - ./user_spec.yml:/user_spec.yml
+  #   ports:
+  #     - 14010:4010
+  #   command: ["mock", "-h", "0.0.0.0", "https://raw.githubusercontent.com/friendpost-july/user-spec/main/user_spec.yml"]
+  #   # command: ["mock", "-h", "0.0.0.0", "/user_spec.yml"]
   usersservice:
+    image: rajchaudhuri/friendpost-userservice:0.2.0
+    ports:
+      - 15002:15002
+    environment:
+      - PORT=15002
+      - MONGODB_HOST=usersdb
+      - RABBITMQ_URL=amqp://admin:something@eventbus
+    
+  timelineservice:
     image: stoplight/prism:4
     # volumes:
     #   - ./user_spec.yml:/user_spec.yml
     ports:
-      - 14010:4010
-    command: ["mock", "-h", "0.0.0.0", "https://raw.githubusercontent.com/friendpost-july/user-spec/main/user_spec.yml"]
-    # command: ["mock", "-h", "0.0.0.0", "/user_spec.yml"]
+      - 14013:4010
+    command: ["mock", "-h", "0.0.0.0", "https://raw.githubusercontent.com/friendpost-july/timeline-spec/main/api-spec.yml"]
+
+  postsservice:
+    image: stoplight/prism:4
+    ports:
+      - 15001:4010
+    command: ["mock", "-h", "0.0.0.0", "https://raw.githubusercontent.com/friendpost-july/post-management-spec/main/post-spec.yml"]
+
+  eventbus:
+    image: rabbitmq:3.13.3-management-alpine
+    hostname: rmq
+    volumes:
+      - rmqvol:/var/lib/rabbitmq:rw
+    ports:
+      - 5672:5672
+      - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=something
+      - RABBITMQ_ERLANG_COOKIE=chocochip
+
+  # frontend:
+  #   image: friendpost-frontend:0.10
+  #   ports:
+  #     - 18019:8080
+  #   environment:
+  #     - DB_SERVER=authdb
+  #     - DB_PORT=3306
+  #     - DB_USER=dbuser
+  #     - DB_PASSWORD=dbsomething
+  #     - DB_DATABASE=UserAuthDB
